test/spec_vectors/align64/ok/module_11.wat
(module (memory i64 0) (func (drop (i64.load align=8 (i64.const 0)))))