test/spec_vectors/align64/fail/module_82.wat
(module (memory i64 0) (func (drop (f64.load align=16 (i64.const 0)))))